--- a/index.html
+++ b/index.html
@@ -23,8 +23,6 @@
   </style>
 </head>
 <body>
-  <img src="assets/img1.png" alt="Figure 1">
-  <img src="assets/img2.png" alt="Figure 2">
-  <img src="assets/img3.png" alt="Figure 3">
+  <img src="anonymous1.png" alt="Anonymous">
 </body>
 </html>
